# Projet_Simulateur_IGOSAT

./: .gitignore  README.md  index.html  journal
IGOsim/: IGOsim.cpp  (+6 more)
IGOsim/src/: CMakeLists.txt  IGOsim.cpp
IGOsim/src/BatteryModule/: Battery.cpp  Battery.h  BatteryController.cpp  BatteryController.h  BatteryModule.cpp  BatteryModule.h  BatteryPhysics.cpp  BatteryPhysics.h  CMakeLists.txt
IGOsim/src/Core/: CLI.cpp  CLI.h  CMakeLists.txt  Connexion.cpp  Connexion.h  File.cpp  File.h  Generators.cpp  Generators.h  HCI.cpp  HCI.h  HCIs.cpp  HCIs.h  ISynchronized.h  MacroModule.cpp  MacroModule.h  Memory.cpp  Memory.h  Message.cpp  Message.h  Module.cpp  Module.h  Physics.cpp  Physics.h  Socket.cpp  Socket.h  Timer.cpp  Timer.h  XMLReader.cpp  XMLReader.h
IGOsim/src/Core/Messages/: FloatMessage.cpp  FloatMessage.h  IntMessage.cpp  IntMessage.h  StringMessage.cpp  StringMessage.h
IGOsim/src/ManPages/: DocGenXML.dox  DocMacroModule.dox  DocMain.dox  DocModule.dox  DocXML.cpp  DocXML.dox
IGOsim/src/SCAOModule/MCoupleur/: MCoupleur.cpp
IGOsim/src/Satellite/: Satellite.cpp  Satellite.h
IGOsim/src/headers/: Battery.h  BatteryController.h  BatteryModule.h  BatteryPhysics.h  CLI.h  Connexion.h  ISynchronized.h  MCoupleur.h  MacroModule.h  Memory.h  Message.h  Module.h  NumberGeneratorModule.h  Physics.h  Socket.h  Timer.h
IGOsim/src/includes/: Battery.cpp  BatteryController.cpp  BatteryModule.cpp  BatteryPhysics.cpp  CLI.cpp  Connexion.cpp  HCI.cpp  MacroModule.cpp  Memory.cpp  Message.cpp  Module.cpp  NumberGeneratorModule.cpp  Physics.cpp  Socket.cpp  Timer.cpp
(+339 files in other folders)
